<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_psw"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bigtalk.bigtalk.tools.ForgetPswActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/register_hint_phone"
            android:ems="10"
            android:id="@+id/forget_psw_edit_phone"
            android:layout_weight="1" />

        <Button
            android:text="@string/btn_text_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forget_psw_btn_verify"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_em2full_selector"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/register_hint_code"
            android:id="@+id/forget_psw_edit_code"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/register_hint_pass"
            android:id="@+id/forget_psw_edit_psw"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/register_hint_repass"
            android:id="@+id/forget_psw_edit_psw_again"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:text="@string/btn_text_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forget_psw_btn_confirm"
        android:textColor="@color/base_color_text_white"
        android:background="@drawable/button_full_selector"/>
</LinearLayout>
