<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.bigtalk.bigtalk.contest.DebateFragment"
    android:background="@color/background"
    android:orientation="vertical"
    >

    <RadioGroup
        android:id="@+id/topGroup"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioContest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/rdo_contest_label"
            android:textColor="@drawable/btn_text" />

        <RadioButton
            android:id="@+id/radioChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/rdo_chat_label"
            android:textColor="@drawable/btn_text" />

        <RadioButton
            android:id="@+id/radioAttended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/rdo_attended_label"
            android:textColor="@drawable/btn_text" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/greyBackground" />
    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    </FrameLayout>


</LinearLayout>
